2008-08-18  Daniel Macks  <dmacks@netspace.org>

Reviewed by Mark Rowe.

        https://bugs.webkit.org/show_bug.cgi?id=20410
        More portable/self-documenting replacement for SIZE_MAX.

        * platform/network/curl/FormDataStreamCurl.cpp:
        (WebCore::FormDataStream::read):

git-svn-id: svn://svn.chromium.org/blink/trunk@35826 bbb929c8-8fbe-4397-9dbb-9b2b20218538