third_party/WebKit/WebCore/platform/network/curl/FormDataStreamCurl.cpp
@@ -29,16 +29,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  */
 
 #include "config.h"
-
-// We need to define __STDC_LIMIT_MACROS to define SIZE_MAX.
-#ifndef __STDC_LIMIT_MACROS
-#define __STDC_LIMIT_MACROS
-#include <stdint.h>
-#undef __STDC_LIMIT_MACROS
-#else
-#include <stdint.h>
-#endif
-
 #include "FormDataStreamCurl.h"
 
 #include "CString.h"
@@ -56,7 +46,7 @@ FormDataStream::~FormDataStream()
 size_t FormDataStream::read(void* ptr, size_t blockSize, size_t numberOfBlocks)
 {
     // Check for overflow.
-    if (!numberOfBlocks || blockSize > SIZE_MAX / numberOfBlocks)
+    if (!numberOfBlocks || blockSize > std::numeric_limits<size_t>::max() / numberOfBlocks)
         return 0;
 
     Vector<FormDataElement> elements;
